Included NHTS data in ITHIM.Rmd

--- a/R/ITHIM.Rmd
+++ b/R/ITHIM.Rmd
@@ -17,7 +17,8 @@ library("plyr")
 
 ```{r loadITHIM, message = FALSE, eval = TRUE, warning = FALSE, error = TRUE}
 library("devtools")
-#install_github("syounkin/ITHIM", ref="devel")
+install_github("smbache/magrittr", ref="master")
+library("magrittr")
 install("~/ITHIM/")
 library("ITHIM")
 ```
@@ -392,14 +393,65 @@ foo <- mapply(getTotalDistribution,
 ### NHTS
 
 ```{r NHTS}
-foo <- read.csv(file = "~/GHI/data/NHTS/Ascii/DAYV2PUB.CSV", na.strings = "-9")
-names(foo) <- c("HOUSEID","PERSONID","FRSTHM","OUTOFTWN","ONTD_P1","ONTD_P2","ONTD_P3","ONTD_P4","ONTD_P5","ONTD_P6","ONTD_P7","ONTD_P8","ONTD_P9","ONTD_P10","ONTD_P11","ONTD_P12","ONTD_P13","ONTD_P14","ONTD_P15","TDCASEID","HH_HISP","HH_RACE","DRIVER","R_SEX","WORKER","DRVRCNT","HHFAMINC","HHSIZE","HHVEHCNT","NUMADLT","FLAG100","LIF_CYC","TRIPPURP","AWAYHOME","CDIVMSAR","CENSUS_D","CENSUS_R","DROP_PRK","DRVR_FLG","EDUC","ENDTIME","HH_ONTD","HHMEMDRV","HHRESP","HHSTATE","HHSTFIPS","INTSTATE","MSACAT","MSASIZE","NONHHCNT","NUMONTRP","PAYTOLL","PRMACT","PROXY","PSGR_FLG","R_AGE","RAIL","STRTTIME","TRACC1","TRACC2","TRACC3","TRACC4","TRACC5","TRACCTM","TRAVDAY","TREGR1","TREGR2","TREGR3","TREGR4","TREGR5","TREGRTM","TRPACCMP","TRPHHACC","TRPHHVEH","TRPTRANS","TRVL_MIN","TRVLCMIN","TRWAITTM","URBAN","URBANSIZE","URBRUR","USEINTST","USEPUBTR","VEHID","WHODROVE","WHYFROM","WHYTO","WHYTRP1S","WRKCOUNT","DWELTIME","WHYTRP90","TDTRPNUM","TDWKND","TDAYDATE","TRPMILES","WTTRDFIN","VMT_MILE","PUBTRANS","HOMEOWN","HOMETYPE","HBHUR","HTRESDN","HTHTNRNT","HTPPOPDN","HTEEMPDN","HBRESDN","HBHTNRNT","HBPPOPDN","GASPRICE","VEHTYPE","HH_CBSA","HHC_MSA")
+DAYV2PUB <- read.csv(file = "~/GHI/data/NHTS/Ascii/DAYV2PUB.CSV", na.strings = "-9")
+names(DAYV2PUB) <- c("HOUSEID","PERSONID","FRSTHM","OUTOFTWN","ONTD_P1","ONTD_P2","ONTD_P3","ONTD_P4","ONTD_P5","ONTD_P6","ONTD_P7","ONTD_P8","ONTD_P9","ONTD_P10","ONTD_P11","ONTD_P12","ONTD_P13","ONTD_P14","ONTD_P15","TDCASEID","HH_HISP","HH_RACE","DRIVER","R_SEX","WORKER","DRVRCNT","HHFAMINC","HHSIZE","HHVEHCNT","NUMADLT","FLAG100","LIF_CYC","TRIPPURP","AWAYHOME","CDIVMSAR","CENSUS_D","CENSUS_R","DROP_PRK","DRVR_FLG","EDUC","ENDTIME","HH_ONTD","HHMEMDRV","HHRESP","HHSTATE","HHSTFIPS","INTSTATE","MSACAT","MSASIZE","NONHHCNT","NUMONTRP","PAYTOLL","PRMACT","PROXY","PSGR_FLG","R_AGE","RAIL","STRTTIME","TRACC1","TRACC2","TRACC3","TRACC4","TRACC5","TRACCTM","TRAVDAY","TREGR1","TREGR2","TREGR3","TREGR4","TREGR5","TREGRTM","TRPACCMP","TRPHHACC","TRPHHVEH","TRPTRANS","TRVL_MIN","TRVLCMIN","TRWAITTM","URBAN","URBANSIZE","URBRUR","USEINTST","USEPUBTR","VEHID","WHODROVE","WHYFROM","WHYTO","WHYTRP1S","WRKCOUNT","DWELTIME","WHYTRP90","TDTRPNUM","TDWKND","TDAYDATE","TRPMILES","WTTRDFIN","VMT_MILE","PUBTRANS","HOMEOWN","HOMETYPE","HBHUR","HTRESDN","HTHTNRNT","HTPPOPDN","HTEEMPDN","HBRESDN","HBHTNRNT","HBPPOPDN","GASPRICE","VEHTYPE","HH_CBSA","HHC_MSA")
 
-foo <- within(foo, {
+DAYV2PUB <- within(DAYV2PUB, {
     URBRUR <- as.factor(URBRUR)
     HHSTFIPS <- as.factor(HHSTFIPS)
     MSACAT <- as.factor(MSACAT)
+    TRPTRANS <- as.factor(TRPTRANS)
     })
+
+HHV2PUB <- read.csv(file = "~/GHI/data/NHTS/Ascii/HHV2PUB.CSV", na.strings = "-9")
+names(HHV2PUB) <- c("HOUSEID","VARSTRAT","WTHHFIN","DRVRCNT","CDIVMSAR","CENSUS_D","CENSUS_R","HH_HISP","HH_RACE","HHFAMINC","HHRELATD","HHRESP","HHSIZE","HHSTATE","HHSTFIPS","HHVEHCNT","HOMEOWN","HOMETYPE","MSACAT","MSASIZE","NUMADLT","RAIL","RESP_CNT","SCRESP","TRAVDAY","URBAN","URBANSIZE","URBRUR","WRKCOUNT","TDAYDATE","FLAG100","LIF_CYC","CNTTDHH","HBHUR","HTRESDN","HTHTNRNT","HTPPOPDN","HTEEMPDN","HBRESDN","HBHTNRNT","HBPPOPDN","HH_CBSA","HHC_MSA")
+
+PERV2PUB <- read.csv(file = "~/GHI/data/NHTS/Ascii/PERV2PUB.CSV", na.strings = "-9")
+names(PERV2PUB) <- c("HOUSEID","PERSONID","VARSTRAT","WTPERFIN","SFWGT","HH_HISP","HH_RACE","DRVRCNT","HHFAMINC","HHSIZE","HHVEHCNT","NUMADLT","WRKCOUNT","FLAG100","LIF_CYC","CNTTDTR","BORNINUS","CARRODE","CDIVMSAR","CENSUS_D","CENSUS_R","CONDNIGH","CONDPUB","CONDRIDE","CONDRIVE","CONDSPEC","CONDTAX","CONDTRAV","DELIVER","DIARY","DISTTOSC","DRIVER","DTACDT","DTCONJ","DTCOST","DTRAGE","DTRAN","DTWALK","EDUC","EVERDROV","FLEXTIME","FMSCSIZE","FRSTHM","FXDWKPL","GCDWORK","GRADE","GT1JBLWK","HHRESP","HHSTATE","HHSTFIPS","ISSUE","OCCAT","LSTTRDAY","MCUSED","MEDCOND","MEDCOND6","MOROFTEN","MSACAT","MSASIZE","NBIKETRP","NWALKTRP","OUTCNTRY","OUTOFTWN","PAYPROF","PRMACT","PROXY","PTUSED","PURCHASE","R_AGE","R_RELAT","R_SEX","RAIL","SAMEPLC","SCHCARE","SCHCRIM","SCHDIST","SCHSPD","SCHTRAF","SCHTRN1","SCHTRN2","SCHTYP","SCHWTHR","SELF_EMP","TIMETOSC","TIMETOWK","TOSCSIZE","TRAVDAY","URBAN","URBANSIZE","URBRUR","USEINTST","USEPUBTR","WEBUSE","WKFMHMXX","WKFTPT","WKRMHM","WKSTFIPS","WORKER","WRKTIME","WRKTRANS","YEARMILE","YRMLCAP","YRTOUS","DISTTOWK","TDAYDATE","HOMEOWN","HOMETYPE","HBHUR","HTRESDN","HTHTNRNT","HTPPOPDN","HTEEMPDN","HBRESDN","HBHTNRNT","HBPPOPDN","HH_CBSA","HHC_MSA")
+
+VEHV2PUB <- read.csv(file = "~/GHI/data/NHTS/Ascii/VEHV2PUB.CSV", na.strings = "-9")
+names(VEHV2PUB) <- c("HOUSEID","WTHHFIN","VEHID","DRVRCNT","HHFAMINC","HHSIZE","HHVEHCNT","NUMADLT","FLAG100","CDIVMSAR","CENSUS_D","CENSUS_R","HHSTATE","HHSTFIPS","HYBRID","MAKECODE","MODLCODE","MSACAT","MSASIZE","OD_READ","RAIL","TRAVDAY","URBAN","URBANSIZE","URBRUR","VEHCOMM","VEHOWNMO","VEHYEAR","WHOMAIN","WRKCOUNT","TDAYDATE","VEHAGE","PERSONID","HH_HISP","HH_RACE","HOMEOWN","HOMETYPE","LIF_CYC","ANNMILES","HBHUR","HTRESDN","HTHTNRNT","HTPPOPDN","HTEEMPDN","HBRESDN","HBHTNRNT","HBPPOPDN","BEST_FLG","BESTMILE","BEST_EDT","BEST_OUT","FUELTYPE","GSYRGAL","GSCOST","GSTOTCST","EPATMPG","EPATMPGF","EIADMPG","VEHTYPE","HH_CBSA","HHC_MSA")
+
+NHTS.trips <- data.frame(HOUSEID = DAYV2PUB$HOUSEID,
+                   PERSONID = DAYV2PUB$PERSONID,
+                   TDCASEID = DAYV2PUB$TDCASEID,
+                   AT = ifelse(DAYV2PUB$TRPTRANS == "22", "cycle", ifelse(DAYV2PUB$TRPTRANS == "23","walk",ifelse(!is.na(DAYV2PUB$TRPTRANS),"other",NA))),
+                   TRVL_MIN = as.numeric(DAYV2PUB$TRVL_MIN),
+                   TRVLCMIN = as.numeric(DAYV2PUB$TRVLCMIN)
+                   )
+
+convertToAgeClass <- function(age){
+  age <- as.numeric(age)
+  agecat <- ifelse( age <= 4, "00-04", ifelse( age <= 14, "05-14", ifelse( age <= 29, "15-29", ifelse( age <= 44, "30-44", ifelse( age <= 59, "45-59", ifelse( age <= 69, "60-69", ifelse( age <= 79, "70-79", ifelse( age > 80, "80+", NA))))))))
+  return(agecat)
+}
+
+NHTS.person <- with(PERV2PUB,{
+                    data.frame(HOUSEID = HOUSEID,
+                               PERSONID = PERSONID,
+                               SEX = as.factor(ifelse(R_SEX=="1", "M", ifelse(R_SEX=="2", "F", NA))),
+                               AGE = as.factor(convertToAgeClass(R_AGE))
+)
+})
+
+NHTS <- merge(NHTS.person, NHTS.trips, by = c("HOUSEID","PERSONID"))
+
+NHTS <- subset(NHTS, !is.na(AGE) & !is.na(SEX))
+
+
+(foo <- ddply(NHTS, .(SEX, AGE, AT), summarise,
+             sum = sum(TRVL_MIN, na.rm=T)
+             ))
+
+
+ggplot(NHTS, aes(x = TRVL_MIN, ..density.., colour = AGE)) + geom_freqpoly(binwidth = 15) + facet_grid( SEX ~ AT) + labs(x = "Foo", colour = "Age") + coord_cartesian(xlim = c(0, 75))
+
+
+countPeople <- function(data){
+ nrow(data %>% group_by(HOUSEID, PERSONID) %>% summarize(n()))
+}
+
+
 
 ```
 <!--
